gateway-api-demo-http-route.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  labels:
    gateway: external-http
  name: k8s-gateway-api-demo
spec:
  gateways:
    allow: All
  rules:
  - forwardTo:
    - port: 8080
      serviceName: k8s-gateway-api-demo-service-ff3b85e
      weight: 50
    - port: 8080
      serviceName: k8s-gateway-api-demo-service-c26b9e2
      weight: 50
    matches:
    - path:
        type: Prefix
        value: /
